enchantment tooltip rework DONE! enchanting table made of amethyst now. fix under armor damage, horse armor tag (why tf is there no horse armor tag in vanilla or conventionaltags????) and horse armor names